tests/ui/children_messages.stderr
error: proc macro panicked
 --> $DIR/children_messages.rs:4:1
  |
4 | children_messages!(one, two, three, four);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: internal error: entered unreachable code
